[tool.poetry]
name = "slither"
version = "9.9.9"
description = ""
authors = ["James Conroy-Finn <git@invetica.co.uk>"]
license = "AGPL"
readme = "README.org"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pyright = "^1.1.359"
httpx = "^0.27.0"
pytest = "^8.2.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
